--- a/staticwebapp.config.json
+++ b/staticwebapp.config.json
@@ -13,7 +13,7 @@
     "exclude": ["/styles.css", "/script.js", "/*.{css,js,jpg,jpeg,png,gif,svg,ico,woff,woff2,ttf,eot}"]
   },
   "globalHeaders": {
-    "content-security-policy": "default-src 'self' https://fonts.googleapis.com https://fonts.gstatic.com; style-src 'self' 'unsafe-inline' https://fonts.googleapis.com; font-src 'self' https://fonts.gstatic.com; script-src 'self'",
+    "content-security-policy": "default-src 'self' https://fonts.googleapis.com https://fonts.gstatic.com; style-src 'self' 'unsafe-inline' https://fonts.googleapis.com; font-src 'self' https://fonts.gstatic.com; script-src 'self'; connect-src 'self'; img-src 'self' data:;",
     "X-Frame-Options": "DENY",
     "X-Content-Type-Options": "nosniff",
     "Referrer-Policy": "strict-origin-when-cross-origin",
