Add local testing suite for Genie API integration
- Add test-genie-local.js with comprehensive test coverage
- Tests: health check, start conversation, send message, poll result, validate data
- Add TESTING.md with complete setup and troubleshooting guide
- Add local.settings.json.example as template for credentials
- Update .gitignore to exclude local.settings.json
- Add npm scripts: npm start, npm test
- Pretty console output with colors and emojis
- Validates complete end-to-end workflow before deployment

--- a/.gitignore
+++ b/.gitignore
@@ -22,3 +22,10 @@ package-lock.json
 dist/
 build/
 .cache/
+
+# Azure Functions
+local.settings.json
+__blobstorage__/
+__queuestorage__/
+__azurite_db*__.json
+.python_packages/
